# TRTx

./: README.md  main.py
Utils/: common.py  gen_wts.py
YOLOv5/: README.md  yololayer.py  yolov5.py  yolov5_trt.py
libs/: __init__.py  add_nms.py  fixed_base.py  helmetfire_yolov5_fixed.py
plugins/: CMakeLists.txt  gather_fixed.py  yololayer.cu
plugins/nms/: add_nms.py  yolo_nmsPlugin.cpp  yolo_nmsPlugin.h  yolo_nmsUtils.h
plugins/scatterND/: CMakeLists.txt  add_ScatterND.py  scatterND.cu  scatterND.h
plugins/yololayer/: CMakeLists.txt  yololayer.cu
util/: __init__.py  common.py  data.py  image_op.py
